--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,12 @@
     <string name="title_activity_setttings">SetttingsActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="nomods">没有模组</string>
-    <string name="about_app_front">一个基于LSPosed的Minecraftpe模块化启动器。\n现处于立项阶段，仅提供nativeMod功能。\n仅支持Minecraft基岩版1.16.201。</string>
+    <string name="about_app_front">一个基于LSPosed的Minecraft PE模组引擎模块。\n现处于立项阶段，支持以QuickJS为基础的JavaScript脚本。\n仅支持Minecraft基岩版1.16.201。</string>
     <string name="browser_about">跳转</string>
     <string name="about_github_Android">Android: \nApache License 2.0, Android Open Source Project.\nhttps://source.android.google.cn/license?hl=zh-cn</string>
     <string name="about_github_LSPosed">LSPosed: \nGPL-3.0 License,Copyright © 2021 LSPosed.\nhttps://github.com/LSPosed/LSPosed</string>
     <string name="about_github_Dobby">Dobby: \nApache License 2.0,jmpews.\nhttps://github.com/jmpews/Dobby</string>
     <string name="about_github_miniz">miniz: \nMIT License,richgel999.\nhttps://github.com/richgel999/miniz</string>
-    <string name="about_thanks">鸣谢: \n感谢cinit,提供的技术支持.</string>
+    <string name="about_github_quickjs_android">quickjs-android: \nApache-2.0 license,taoweiji.\nhttps://github.com/taoweiji</string>
+    <string name="about_thanks">鸣谢: \n感谢cinit,提供的技术支持。\n感谢飞鹰,提供的技术支持。</string>
 </resources>
